[gd_scene load_steps=17 format=2]

[ext_resource path="res://Imagens/speaker.png" type="Texture" id=1]
[ext_resource path="res://Codigos/HUDS/telaInicial.gd" type="Script" id=2]
[ext_resource path="res://Sons/Forro Brasil - Hermeto Pascoal (8 bits).WAV" type="AudioStream" id=3]
[ext_resource path="res://Sons/sombotaopressionado.mp3" type="AudioStream" id=4]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Imagens/pixilart-drawing (1).png" type="Texture" id=6]
[ext_resource path="res://Imagens/iniciar.png" type="Texture" id=7]
[ext_resource path="res://Imagens/sair.png" type="Texture" id=8]
[ext_resource path="res://Imagens/controles.png" type="Texture" id=9]
[ext_resource path="res://Imagens/pixilart-drawing.png" type="Texture" id=10]

[sub_resource type="Animation" id=11]
length = 0.001

[sub_resource type="Animation" id=13]
resource_name = "title"
length = 2.0
loop = true

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="telaInicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="tituloAnim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/title = SubResource( 13 )

[node name="fundo" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 6 )
expand = true

[node name="Pixilart-drawing" type="Sprite" parent="."]
position = Vector2( 965, 191 )
scale = Vector2( 7.5, 8.5 )
texture = ExtResource( 10 )

[node name="botaoIniciar" type="Button" parent="."]
margin_left = 754.0
margin_top = 378.0
margin_right = 888.0
margin_bottom = 446.0
rect_scale = Vector2( 3, 3 )
theme = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0, 1, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="botaoSair" type="Button" parent="."]
margin_left = 760.0
margin_top = 762.0
margin_right = 1169.0
margin_bottom = 965.0
theme = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0, 1, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 8 )
icon_align = 1
expand_icon = true

[node name="botaoControles" type="Button" parent="."]
margin_left = 729.0
margin_top = 568.0
margin_right = 1184.0
margin_bottom = 776.0
theme = SubResource( 2 )
custom_colors/font_color_hover = Color( 1, 0.866667, 0, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 0, 1, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="botaoSelecionado" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.255

[node name="botaoSom" type="Button" parent="."]
margin_left = 1785.0
margin_top = 57.0
margin_right = 1870.0
margin_bottom = 137.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 1 )
icon_align = 1
expand_icon = true

[node name="musicaFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="mouse_entered" from="botaoIniciar" to="." method="_on_botaoIniciar_mouse_entered"]
[connection signal="pressed" from="botaoIniciar" to="." method="_on_botaoIniciar_pressed"]
[connection signal="mouse_entered" from="botaoSair" to="." method="_on_botaoSair_mouse_entered"]
[connection signal="pressed" from="botaoSair" to="." method="_on_botaoSair_pressed"]
[connection signal="mouse_entered" from="botaoControles" to="." method="_on_botaoControles_mouse_entered"]
[connection signal="pressed" from="botaoControles" to="." method="_on_botaoControles_pressed"]
[connection signal="pressed" from="botaoSom" to="." method="_on_botaoSom_pressed"]
[connection signal="finished" from="musicaFundo" to="." method="_on_musicaFundo_finished"]
